--- a/boost-frontend/src/main/web/src/app/my-books/my-books.component.html
+++ b/boost-frontend/src/main/web/src/app/my-books/my-books.component.html
@@ -42,5 +42,5 @@
 
 <div *ngIf="!books || books.empty" class="mt-5 container alert alert-danger">
   <fa-icon [icon]="['fas','exclamation']" class="fa-4x"></fa-icon>
-  <p>You have no books yet</p>
+  <p>You have no content yet</p>
 </div>
