--- a/boost-frontend/src/main/web/src/app/my-books/my-books.component.html
+++ b/boost-frontend/src/main/web/src/app/my-books/my-books.component.html
@@ -1,16 +1,19 @@
 <app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
 <div class="container mt-5" *ngIf="books &&!books.empty">
+  <div [ngClass]="!bookFormVisible? 'text-right':'col-12'">
+    <app-book-form  (emitter)="bookFormVisible = $event" [editMode]="false" [book]="newBook()"></app-book-form>
+  </div>
 
-
-  <div class="card mb-2" *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
-    <div class="card-body">
-      <div class="text-muted text-dark clickable" [routerLink]="linkToBook(book,'view')">
-        <p class="ml-1 ">
-          <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id" customClass="img-fluid col-2 mt-2 mb-2  "></app-image-loader>
-          {{book.title}}
-        </p>
+  <div *ngIf="!bookFormVisible">
+    <div  class="card mb-2" *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
+      <div class="card-body">
+        <div class="text-muted text-dark clickable" [routerLink]="linkToBook(book,'view')">
+          <p class="ml-1 ">
+            <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id" customClass="img-fluid col-2 mt-2 mb-2  "></app-image-loader>
+            {{book.title}}
+          </p>
+        </div>
       </div>
-    </div>
       <div class="card-footer">
 
         <span *ngIf="book.published" class=" font-italic text-muted ">Published:&nbsp;<fa-icon class="text-success" [icon]="['far','check-circle']"></fa-icon></span>
@@ -25,9 +28,10 @@
         </div>
       </div>
 
+    </div>
   </div>
 
-  <div *ngIf="books && !books.empty && books.totalPages  > 1"
+  <div *ngIf="!bookFormVisible && books && !books.empty && books.totalPages  > 1"
        class="text-center container mt-3 mr-1 mb-3 pb-1 ">
     <div class="text-wrap">
       <pagination-controls (pageChange)="getMyBooks($event)"
