--- a/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
+++ b/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 <app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
 
-<div class="container" >
+<div class="container text-uppercase" >
   <div *ngIf="user && profile" class="">
     <div class="container col-4">
       <app-image-preview  [defaultImage]="user.profile && user.profile.profilePicture ? user.profile.profilePicture.id : null" (emitter)="updateProfilePicture($event)"></app-image-preview>
@@ -14,7 +14,18 @@
         <label for="lastName">Last name</label>
         <input type="text" class="form-control" id="lastName" name="lastName" aria-describedby="lastName" placeholder="last name" [(ngModel)]="profile.lastName">
       </div>
-      <button type="submit" class="btn btn-primary" (click)="saveProfile()">Submit</button>
+      <div class="form-group">
+        <label for="birthdate">Birthdate</label>
+        <input format="mm-dd-yyyy" type="date" class="form-control" id="birthdate" name="birthdate" aria-describedby="birthdate" [(ngModel)]="profile.birthdate">
+      </div>
+
+      <div class="form-group">
+        <label for="bio">About you</label>
+        <textarea  autosize class="form-control " id="bio" [(ngModel)]="profile.bio"></textarea>
+      </div>
+      <button type="submit" class="mb-3 btn btn-outline-primary float-right " (click)="saveProfile()">
+        <fa-icon [icon]="['fas','save']"></fa-icon>&nbsp; Save
+      </button>
     </div>
   </div>
 </div>
