--- a/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
+++ b/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
+<app-logo [headerClass]="'text-center  mt-5 pt-5   '"></app-logo>
 
 <div class="container text-uppercase" >
   <div *ngIf="user && profile" class="">
@@ -8,23 +8,23 @@
     <div class="container col-12">
       <div class="form-group">
         <label for="firstName">First name</label>
-        <input type="text" class="form-control" id="firstName"  name="firstName" aria-describedby="firstName" placeholder="first name" [(ngModel)]="profile.firstName">
+        <input [disabled]="loading" type="text" class="form-control" id="firstName"  name="firstName" aria-describedby="firstName" placeholder="first name" [(ngModel)]="profile.firstName">
       </div>
       <div class="form-group">
         <label for="lastName">Last name</label>
-        <input type="text" class="form-control" id="lastName" name="lastName" aria-describedby="lastName" placeholder="last name" [(ngModel)]="profile.lastName">
+        <input [disabled]="loading" type="text" class="form-control" id="lastName" name="lastName" aria-describedby="lastName" placeholder="last name" [(ngModel)]="profile.lastName">
       </div>
       <div class="form-group">
         <label for="birthdate">Birthdate</label>
-        <input format="mm-dd-yyyy" type="date" class="form-control" id="birthdate" name="birthdate" aria-describedby="birthdate" [(ngModel)]="profile.birthdate">
+        <input [disabled]="loading" format="mm-dd-yyyy" type="date" class="form-control" id="birthdate" name="birthdate" aria-describedby="birthdate" [(ngModel)]="profile.birthdate">
       </div>
 
       <div class="form-group">
         <label for="bio">About you</label>
-        <textarea  autosize class="form-control " id="bio" [(ngModel)]="profile.bio"></textarea>
+        <textarea  [disabled]="loading" autosize class="form-control " id="bio" [(ngModel)]="profile.bio"></textarea>
       </div>
-      <button type="submit" class="mb-3 btn btn-outline-primary float-right " (click)="saveProfile()">
-        <fa-icon [icon]="['fas','save']"></fa-icon>&nbsp; Save
+      <button [disabled]="loading" type="submit" class="mb-3 btn btn-outline-primary float-right text-uppercase " (click)="saveProfile()">
+        <fa-icon [icon]="['fas','save']"></fa-icon>&nbsp; {{loading ? 'Saving': 'Save'}}
       </button>
     </div>
   </div>
