bug fix & update profile

--- a/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
+++ b/boost-frontend/src/main/web/src/app/user-profile/user-profile.component.html
@@ -7,9 +7,9 @@
     </div>
     <div class="container ">
       <div class="text-center">
-        <span>{{followingCount}} following{{followingCount > 1 ? 's':''}}</span>
+        <span>{{followingCount}} subscription{{followingCount > 1 ? 's':''}}</span>
         <span>&nbsp;-&nbsp;</span>
-        <span>{{followerCount}} follower{{followerCount > 1 ? 's':''}}</span>
+        <span>{{followerCount}} subscriber{{followerCount > 1 ? 's':''}}</span>
       </div>
     </div>
     <div class="container col-12">
