--- a/boost-frontend/src/main/web/src/app/notification/notification.component.html
+++ b/boost-frontend/src/main/web/src/app/notification/notification.component.html
@@ -1,3 +1,3 @@
 <div class="ml-1 mr-1">
-  <button class="btn border-radius-0 btn-sm btn-outline-secondary text-light">0</button>
+  <button [ngClass]="'btn btn-sm ' +(notifications.length > 0 ? 'btn-danger':'btn-outline-secondary')" (click)="notifications=[]">{{notifications.length}}</button>
 </div>
