--- a/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
+++ b/boost-frontend/src/main/web/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark    bg-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light ">
   <button class="navbar-toggler pb-2" type="button" (click)="toggleNavbar()">
     <span class="navbar-toggler-icon"></span>
   </button>
