--- a/boost-frontend/src/main/web/src/app/notification/notification.component.html
+++ b/boost-frontend/src/main/web/src/app/notification/notification.component.html
@@ -1,3 +1,3 @@
 <div class="ml-1 mr-1">
-  <button [ngClass]="'btn btn-sm ' +(notifications.length > 0 ? 'btn-danger':'btn-outline-secondary')" (click)="notifications=[]">{{notifications.length}}</button>
+  <button  data-toggle="popover" data-placement="bottom" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?" #notifButton [ngClass]="'btn btn-sm ' +(notifications.length > 0 ? 'btn-danger':'btn-outline-secondary')" (click)="togglePopover()">{{notifications.length}}</button>
 </div>
