--- a/boost-frontend/src/app/books/books.component.html
+++ b/boost-frontend/src/app/books/books.component.html
@@ -8,11 +8,11 @@
     </select>
   </datalist>
   <div [class]="'input-group text-center '">
-      <input  list="listTitles" [(ngModel)]="searchText" (ngModelChange)="searchBookByTitle(searchText,1)" type="text"  [class]="'col-lg-5 ml-auto form-control border-right-0 border-secondary'" placeholder="Search...">
+      <input  list="listTitles" [(ngModel)]="searchText" (ngModelChange)="searchBookByTitle(searchText,1)" type="text"  [class]="'col-lg-5 ms-auto form-control border-right-0 border-secondary'" placeholder="Search...">
 
       <button [disabled]="loading || !searchText" (click)="searchBookByTitle(searchText)" class="btn no-focus btn-outline-secondary   text-center mb-2 border-radius-0"><fa-icon [icon]="['fas','search']" ></fa-icon>{{books && books.content ? ' ('+books.totalElements+')' : ''}}</button>
 
-    <div  [class]="'btn-group mr-auto'">
+    <div  [class]="'btn-group me-auto'">
       <button *ngIf="isLoggedIn()"  [disabled]="loading" (click)="getBooks(1)" class="btn border-radius-0 no-focus btn-outline-secondary border-left-0  mb-2  "><fa-icon [icon]="faSync" ></fa-icon></button>
     </div>
 
@@ -52,7 +52,7 @@
     </table>
   </div>
   <div *ngIf="books && !books.empty && books.totalPages  > 1"
-       class="text-center container mt-2 mr-1 mb-3 pb-1 ">
+       class="text-center container mt-2 me-1 mb-3 pb-1 ">
     <div class="text-wrap">
       <pagination-controls (pageChange)="getBooks($event)"
                            previousLabel=""
