--- a/boost-frontend/src/app/home/home.component.html
+++ b/boost-frontend/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <p *ngIf="!isLoggedIn()">You're not logged in.</p>
     <div *ngIf="isLoggedIn()">
       <p>Welcome {{getUser().username}}!</p>
-      <p>Your access roles are: <span class="badge badge-info mr-1" *ngFor="let role of getUser().authorities">{{role.authority}}</span></p>
+      <p>Your access roles are: <span class="badge badge-info me-1" *ngFor="let role of getUser().authorities">{{role.authority}}</span></p>
     </div>
 
     <!-- history -->
