--- a/boost-frontend/src/app/my-books/my-books.component.html
+++ b/boost-frontend/src/app/my-books/my-books.component.html
@@ -10,7 +10,7 @@
     <div  class="card mb-2" *ngFor="let book of books.content | paginate: { itemsPerPage: books.size, currentPage: books.number+1, totalItems: books.totalElements}">
       <div class="card-body">
         <div class="text-muted text-dark clickable" [routerLink]="linkToBook(book,'view')">
-          <p class="ml-1 ">
+          <p class="ms-1 ">
             <app-image-loader *ngIf="book.cover" [imageId]="book.cover.id" customClass="img-fluid col-2 mt-2 mb-2  "></app-image-loader>
             {{book.title}}
           </p>
@@ -34,7 +34,7 @@
   </div>
 
   <div *ngIf="!bookFormVisible && books && !books.empty && books.totalPages  > 1"
-       class="text-center container mt-3 mr-1 mb-3 pb-1 ">
+       class="text-center container mt-3 me-1 mb-3 pb-1 ">
     <div class="text-wrap">
       <pagination-controls (pageChange)="getMyBooks($event)"
                            previousLabel=""
