--- a/boost-frontend/src/app/feat/book/books/books.component.html
+++ b/boost-frontend/src/app/feat/book/books/books.component.html
@@ -2,13 +2,9 @@
 <div *ngIf="!books || books.empty" class="mt-lg-5 pt-lg-5 "></div>
 <app-logo [headerClass]="'text-center  mt-5  pt-5 '"></app-logo>
 <div class="container mt-5">
-  <datalist id="listTitles"  *ngIf="titles">
-    <select class="form-control" >
-      <option *ngFor="let title of titles" [value]="title.title"></option>
-    </select>
-  </datalist>
+
   <div [class]="'input-group text-center '">
-      <input  list="listTitles" [(ngModel)]="searchText" (ngModelChange)="searchBookByTitle(searchText,1)" type="text"  [class]="'col-lg-5 ms-auto form-control border-right-0 border-secondary'" placeholder="Search...">
+      <input  [(ngModel)]="searchText" (ngModelChange)="searchBookByTitle(searchText,1)" type="text"  [class]="'ms-auto form-control form-control-sm border-right-0 border-secondary'" placeholder="Search...">
 
       <button [disabled]="loading || !searchText" (click)="searchBookByTitle(searchText)" class="btn no-focus btn-outline-secondary   text-center mb-2 border-radius-0"><fa-icon [icon]="['fas','search']" ></fa-icon>{{books && books.content ? ' ('+books.totalElements+')' : ''}}</button>
 
