--- a/boost-frontend/src/app/app.component.html
+++ b/boost-frontend/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
-<main role="main" class="flex-shrink-0 mt-lg-5 ">
-  <div class="routerContent">
-    <router-outlet></router-outlet>
-  </div>
+<main role="main">
+  <router-outlet></router-outlet>
 </main>
