--- a/boost-frontend/src/app/shared/image-loader/image-loader.component.html
+++ b/boost-frontend/src/app/shared/image-loader/image-loader.component.html
@@ -1,7 +1,7 @@
-    <img [class]="customClass" *ngIf="imageBase64" [src]="imageBase64" >
-    <div *ngIf="!imageBase64" class="lds-ellipsis">
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
+<img [class]="customClass" *ngIf="imageBase64" [src]="imageBase64" [style]="style" />
+<div *ngIf="!imageBase64" class="lds-ellipsis">
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
