--- a/boost-frontend/src/app/feat/layout/navbar/navbar.component.html
+++ b/boost-frontend/src/app/feat/layout/navbar/navbar.component.html
@@ -1,13 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <button class="navbar-toggler pb-2" type="button" (click)="toggleNavbar()">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div [class]="toggleNavbarShow()" id="navbarTogglerDemo01">
     <ul class="navbar-nav me-auto pt-1">
-      <li [class]="'nav-item ' +( m.selected ? 'active' :'')" *ngFor="let m of menu" (click)="$event.preventDefault();click(m);m.selected=true;">
-        <a routerLink="{{m.route}}" *ngIf="hasRole(m.role)" class="nav-link">
+      <li
+        [class]="'nav-item ' + (m.selected ? 'active' : '')"
+        *ngFor="let m of menu"
+        (click)="$event.preventDefault(); click(m); m.selected = true"
+      >
+        <a routerLink="{{ m.route }}" *ngIf="hasRole(m.role)" class="nav-link">
           <fa-icon [icon]="m.icon" class=""></fa-icon>
-        <span class="text-uppercase">&nbsp;{{m.label}}</span>
+          <span class="text-uppercase">&nbsp;{{ m.label }}</span>
         </a>
       </li>
       <li class="nav-item" *ngFor="let link of externalLink">
@@ -17,6 +21,5 @@
       </li>
     </ul>
     <app-login></app-login>
-
   </div>
 </nav>
