--- a/boost-frontend/src/app/shared/audio-player/audio-player.component.html
+++ b/boost-frontend/src/app/shared/audio-player/audio-player.component.html
@@ -1,6 +1,5 @@
-<div  class="form-group me-2" *ngIf="showPlayer && upload">
-  <a [routerLink]="linkDetail"  *ngIf="showTitle" class="badge label text-link text-muted text-warning text-uppercase me-2 ">{{title}}</a>
-  <audio  #audioSource [id]="upload.id+currentPlayer" (playing)="propagatePlayingEvent($event)"(pause)="propagatePauseEvent($event)" controls [class]="'bg-transparent pe-3  text-muted' + width? 'w-'+width : ''">
+<ng-container *ngIf="showPlayer && upload">
+  <audio  #audioSource [id]="upload.id+currentPlayer" (playing)="propagatePlayingEvent($event)"(pause)="propagatePauseEvent($event)" controls [className]="className" [style]="style">
     <source [src]="getSource()"  >
   </audio>
-</div>
+</ng-container>
