--- a/boost-frontend/src/app/feat/layout/login/login.component.html
+++ b/boost-frontend/src/app/feat/layout/login/login.component.html
@@ -1,45 +1,32 @@
-<div class="d-inline">
-  <div (keydown.enter)="login()" *ngIf="!isLoggedIn()" class="form-inline my-2 my-lg-0">
-    <input
-      autocapitalize="none"
-      autofocus="autofocus"
-      [(ngModel)]="username"
-      name="username"
-      class="border-radius-0 form-control me-sm-2"
-      type="text"
-      placeholder="Username"
-      aria-label="Username"
-    />
-    <input
-      (keydown.enter)="login()"
-      [(ngModel)]="password"
-      name="password"
-      class="form-control me-sm-2 border-radius-0"
-      type="password"
-      placeholder="Password"
-      aria-label="Password"
-    />
-    <button class="btn border-0 btn-outline-secondary text-uppercase" type="button" (click)="login()">
-      <span class="text-uppercase">Sign in&nbsp;</span>
+<div (keydown.enter)="login()" *ngIf="!isLoggedIn()" class="row row-cols-lg-auto g-3">
+  <div class="col-12">
+    <input autocapitalize="none" autofocus="autofocus" [(ngModel)]="username" name="username"
+      class="border-radius-0 form-control me-sm-2" type="text" placeholder="Username" aria-label="Username" />
+  </div>
+  <div class="col-12">
+    <input (keydown.enter)="login()" [(ngModel)]="password" name="password" class="form-control me-sm-2 border-radius-0"
+      type="password" placeholder="Password" aria-label="Password" />
+  </div>
+  <div class="col-12">
+    <button class="btn btn-outline-warning text-uppercase me-1" type="button" (click)="login()">
+      <span>Sign in&nbsp;</span>
       <fa-icon [icon]="faSignInAlt"></fa-icon>
     </button>
   </div>
-  <div *ngIf="isLoggedIn()" class="d-flex">
-    <div *ngIf="currentChapter">
-      <app-audio-player
-        [currentTime]="currentChapter.currentTime || 0.0"
-        [updateCurrentTimeUrl]="getUpdateCurrentTimeUrl()"
-        [currentPlayer]="true"
-        [linkDetail]="getChapterDetailLink()"
-        [upload]="currentChapter.chapter.upload"
-        [title]="currentChapter.chapter.title"
-      ></app-audio-player>
+</div>
+<div *ngIf="isLoggedIn()" class="row row-cols-lg-auto g-3">
+  <div *ngIf="currentChapter" class="col-12">
+      <app-audio-player [currentTime]="currentChapter.currentTime || 0.0"
+        [updateCurrentTimeUrl]="getUpdateCurrentTimeUrl()" [currentPlayer]="true" [linkDetail]="getChapterDetailLink()"
+        [upload]="currentChapter.chapter.upload" [title]="currentChapter.chapter.title"></app-audio-player>
     </div>
-    <button class="btn border-0 btn-outline-info my-2 my-sm-0" type="button" (click)="logout()">
-      <span>{{ getUser().username | uppercase }}</span
-      >&nbsp;
+  <div class="col-12">
+    <button class="btn btn-outline-info" type="button" (click)="logout()">
+      <span>{{ getUser().username | uppercase }}</span>&nbsp;
       <fa-icon [icon]="faSignOutAlt"></fa-icon>
     </button>
+  </div>
+  <div class="col-12">
     <app-notification></app-notification>
   </div>
 </div>
