--- a/boost-frontend/src/app/feat/layout/notification/notification.component.html
+++ b/boost-frontend/src/app/feat/layout/notification/notification.component.html
@@ -1,3 +1,6 @@
-<div class="ms-1 me-1">
-  <button  data-toggle="popover" data-placement="bottom" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?" #notifButton [ngClass]="'btn btn-sm ' +(notifications.length > 0 ? 'btn-danger':'btn-outline-secondary')" (click)="togglePopover()">{{notifications.length}}</button>
+<div class="h-100 d-flex align-items-center justify-content-center me-1">
+  <button  data-toggle="popover" data-placement="bottom" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?" #notifButton 
+  [ngClass]="'rounded-circle badge ' +(notifications.length > 0 ? 'btn-danger':'btn-outline-secondary')" 
+    (click)="togglePopover()">{{notifications.length}}</button>
+
 </div>
